@@ -44,17 +44,17 @@ void frame::parse_attributes_(const layout_node& node) {
         set_movable(attr->get_value<bool>());
     if (const layout_attribute* attr = node.try_get_attribute("resizable"))
         set_resizable(attr->get_value<bool>());
-    if (const layout_attribute* attr = node.try_get_attribute("frameStrata"))
-        set_frame_strata(attr->get_value<frame_strata>());
+    if (const layout_attribute* attr = node.try_get_attribute("strata"))
+        set_strata(attr->get_value<strata>());
 
-    if (const layout_attribute* attr = node.try_get_attribute("frameLevel")) {
+    if (const layout_attribute* attr = node.try_get_attribute("level")) {
         if (!is_virtual_) {
-            std::string frame_level = attr->get_value<std::string>();
-            if (frame_level != "PARENT")
+            std::string level = attr->get_value<std::string>();
+            if (level != "PARENT")
                 set_level(attr->get_value<int>());
         } else {
             gui::out << gui::warning << node.get_location() << ": "
-                     << "\"frameLevel\" is not allowed for virtual regions. Ignored." << std::endl;
+                     << "\"level\" is not allowed for virtual regions. Ignored." << std::endl;
         }
     }
 
