@@ -12,7 +12,7 @@ void check_sorted(const T& list) {
     gui::out << "----------" << std::endl;
     for (auto iter = list.begin(); iter != list.end(); ++iter) {
         gui::out << " - " << (*iter)->get_name() << ": "
-                 << utils::to_string((*iter)->get_effective_frame_strata()) << ", "
+                 << utils::to_string((*iter)->get_effective_strata()) << ", "
                  << (*iter)->get_level() << std::endl;
 
         if (iter != list.begin()) {
@@ -28,30 +28,30 @@ void check_sorted(const T& list) {
 }
 
 struct strata_comparator {
-    bool operator()(frame_strata s1, frame_strata s2) const {
-        using int_type        = std::underlying_type_t<frame_strata>;
+    bool operator()(strata s1, strata s2) const {
+        using int_type        = std::underlying_type_t<strata>;
         const auto strata_id1 = static_cast<int_type>(s1);
         const auto strata_id2 = static_cast<int_type>(s2);
         return strata_id1 < strata_id2;
     }
 
-    bool operator()(const frame* f1, frame_strata s2) const {
-        return operator()(f1->get_effective_frame_strata(), s2);
+    bool operator()(const frame* f1, strata s2) const {
+        return operator()(f1->get_effective_strata(), s2);
     }
 
-    bool operator()(frame_strata s1, const frame* f2) const {
-        return operator()(s1, f2->get_effective_frame_strata());
+    bool operator()(strata s1, const frame* f2) const {
+        return operator()(s1, f2->get_effective_strata());
     }
 
     bool operator()(const frame* f1, const frame* f2) const {
-        return operator()(f1->get_effective_frame_strata(), f2->get_effective_frame_strata());
+        return operator()(f1->get_effective_strata(), f2->get_effective_strata());
     }
 };
 
 bool frame_renderer::frame_comparator::operator()(const frame* f1, const frame* f2) const {
-    using int_type        = std::underlying_type_t<frame_strata>;
-    const auto strata_id1 = static_cast<int_type>(f1->get_effective_frame_strata());
-    const auto strata_id2 = static_cast<int_type>(f2->get_effective_frame_strata());
+    using int_type        = std::underlying_type_t<strata>;
+    const auto strata_id1 = static_cast<int_type>(f1->get_effective_strata());
+    const auto strata_id2 = static_cast<int_type>(f2->get_effective_strata());
 
     if (strata_id1 < strata_id2)
         return true;
@@ -71,15 +71,15 @@ bool frame_renderer::frame_comparator::operator()(const frame* f1, const frame* 
 
 frame_renderer::frame_renderer() {
     for (std::size_t i = 0; i < strata_list_.size(); ++i) {
-        strata_list_[i].id = static_cast<frame_strata>(i);
+        strata_list_[i].id = static_cast<strata>(i);
     }
 }
 
-void frame_renderer::notify_strata_needs_redraw_(strata& strata) {
-    strata.redraw_flag = true;
+void frame_renderer::notify_strata_needs_redraw_(strata_data& strata_obj) {
+    strata_obj.redraw_flag = true;
 }
 
-void frame_renderer::notify_strata_needs_redraw(frame_strata strata_id) {
+void frame_renderer::notify_strata_needs_redraw(strata strata_id) {
     notify_strata_needs_redraw_(strata_list_[static_cast<std::size_t>(strata_id)]);
 }
 
@@ -102,26 +102,24 @@ void frame_renderer::notify_rendered_frame(const utils::observer_ptr<frame>& obj
     }
 
     for (std::size_t i = 0; i < strata_list_.size(); ++i) {
-        strata_list_[i].range = get_strata_range_(static_cast<frame_strata>(i));
+        strata_list_[i].range = get_strata_range_(static_cast<strata>(i));
     }
 
-    const auto frame_strata = obj->get_effective_frame_strata();
-    auto&      strata       = strata_list_[static_cast<std::size_t>(frame_strata)];
+    const auto strata_id  = obj->get_effective_strata();
+    auto&      strata_obj = strata_list_[static_cast<std::size_t>(strata_id)];
 
     frame_list_updated_ = true;
-    notify_strata_needs_redraw_(strata);
+    notify_strata_needs_redraw_(strata_obj);
 }
 
-void frame_renderer::notify_frame_strata_changed(
-    const utils::observer_ptr<frame>& /*obj*/,
-    frame_strata old_strata_id,
-    frame_strata new_strata_id) {
+void frame_renderer::notify_strata_changed(
+    const utils::observer_ptr<frame>& /*obj*/, strata old_strata_id, strata new_strata_id) {
 
     std::stable_sort(
         sorted_frame_list_.begin(), sorted_frame_list_.end(), sorted_frame_list_.comparator());
 
     for (std::size_t i = 0; i < strata_list_.size(); ++i) {
-        strata_list_[i].range = get_strata_range_(static_cast<frame_strata>(i));
+        strata_list_[i].range = get_strata_range_(static_cast<strata>(i));
     }
 
     auto& old_strata = strata_list_[static_cast<std::size_t>(old_strata_id)];
@@ -132,18 +130,17 @@ void frame_renderer::notify_frame_strata_changed(
     notify_strata_needs_redraw_(new_strata);
 }
 
-std::pair<std::size_t, std::size_t>
-frame_renderer::get_strata_range_(frame_strata strata_id) const {
+std::pair<std::size_t, std::size_t> frame_renderer::get_strata_range_(strata strata_id) const {
     auto range = std::equal_range(
         sorted_frame_list_.begin(), sorted_frame_list_.end(), strata_id, strata_comparator{});
 
     return {range.first - sorted_frame_list_.begin(), range.second - sorted_frame_list_.begin()};
 }
 
-void frame_renderer::notify_frame_level_changed(
+void frame_renderer::notify_level_changed(
     const utils::observer_ptr<frame>& obj, int /*old_level*/, int /*new_level*/) {
 
-    const auto strata_id = obj->get_effective_frame_strata();
+    const auto strata_id = obj->get_effective_strata();
 
     auto& strata_obj = strata_list_[static_cast<std::size_t>(strata_id)];
 
@@ -169,7 +166,7 @@ frame_renderer::find_topmost_frame(const std::function<bool(const frame&)>& pred
     return nullptr;
 }
 
-int frame_renderer::get_highest_level(frame_strata strata_id) const {
+int frame_renderer::get_highest_level(strata strata_id) const {
     auto range = strata_list_[static_cast<std::size_t>(strata_id)].range;
     auto begin = sorted_frame_list_.begin() + range.first;
     auto last  = sorted_frame_list_.begin() + range.second;
@@ -182,7 +179,7 @@ int frame_renderer::get_highest_level(frame_strata strata_id) const {
     return 0;
 }
 
-void frame_renderer::render_strata_(const strata& strata_obj) const {
+void frame_renderer::render_strata_(const strata_data& strata_obj) const {
     auto begin = sorted_frame_list_.begin() + strata_obj.range.first;
     auto end   = sorted_frame_list_.begin() + strata_obj.range.second;
 
